fix monitoring and add cors
